<resources>
    <string name="app_name">SMTT Casco Bay Lines</string>
    <string name="title_activity_maps">SMTT</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_map">Map</string>

    <string name="marker_title">Fort Gorges</string>
    <string name="title_activity_model_testing">See the Log messages...that is all this does!</string>
    <string name="label_southern_maine">Southern Maine</string>
    <string name="label_transit_tracker">Transit Tracker</string>
    <string name="find_filters_label">Find Schedules -></string>

    <string name="GPS_no_loc_avail">No Location Available</string>
    <string name="GPS_cannot_con">Cannot Connect</string>
    <string name="GPS_no_serv">No Service Available</string>
    <string name="GPS_closest_port_label">Your Closest Port</string>
    <string name="title_activity_single_schedule_layout">SingleScheduleLayout</string>

    <string name="destination_label">Destination</string>
    <string name="port_id_label">Port Number</string>
    <string name="time_label">Time</string>
    <string name="title_activity_schedule">Schedule</string>

    <string name="arrivalSpinnerText">Please select your destination</string>
    <string name="departureSpinnerText">Please select where you would like to depart from</string>
    <string name="dateText">Please enter a date</string>
    <string name="submitFilterText">Filter Trips!</string>
    <string name="noFilterNeededButton">No Filter Please!</string>

    <string-array name="arrivalOptions">
        <item>Arrival Locations</item>
        <item>PK, Peaks Island</item>
        <item>109, Portland</item>
        <item>LD, Little Diamond Island</item>
        <item>GD, Great Diamond Island</item>
        <item>DC, Diamond Cove</item>
        <item>LO, Long Island</item>
        <item>CH, Chebeague Island</item>
        <item>CF, Cliff Island</item>
        <item>BI, Bailey Island</item>
    </string-array>
    <string-array name="departureOptions">
        <item>Departure Locations</item>
        <item>PK, Peaks Island</item>
        <item>109, Portland</item>
        <item>LD, Little Diamond Island</item>
        <item>GD, Great Diamond Island</item>
        <item>DC, Diamond Cove</item>
        <item>LO, Long Island</item>
        <item>CH, Chebeague Island</item>
        <item>CF, Cliff Island</item>
        <item>BI, Bailey Island</item>
    </string-array>
</resources>
