<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:text="@string/port_id_label"
        android:id="@+id/port_textView"
        android:layout_weight="0.16" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_label"
            android:id="@+id/destination_textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_label"
            android:id="@+id/time_textView"
            android:layout_marginLeft="70sp" />
    </LinearLayout>
</LinearLayout>
