<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.smccme.vgreen.smttcascobaylines.StartScreen"
    android:background="@mipmap/banner_arrivaltimes_left">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_southern_maine"
        android:id="@+id/southernMaine_label"
        android:layout_gravity="center_horizontal|top"
        android:textColor="#ffffff"
        android:textSize="42dp"
        android:gravity="center_horizontal"
        android:textColorHighlight="#692867"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_filters_label"
            android:id="@+id/startSched_button"
            android:layout_gravity="center_horizontal|bottom"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_transit_tracker"
            android:id="@+id/transitTracker_label"
            android:layout_gravity="center_horizontal|bottom"
            android:textColor="#ffffff"
            android:textSize="42dp"/>
    </LinearLayout>
</FrameLayout>
