<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.smccme.vgreen.smttcascobaylines.FilterActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GPS_closest_port_label"
            android:id="@+id/closest_port_label"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/closest_port_TV"
            android:layout_weight="1"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/departureSpinner"
            android:entries="@array/departureOptions"
            android:layout_marginTop="33dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </Spinner>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/arrivalSpinner"
            android:entries="@array/arrivalOptions"
            android:layout_marginTop="33dp"
            android:layout_below="@+id/departureSpinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </Spinner>

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"
            android:id="@+id/calendarView"
            android:layout_below="@+id/arrivalSpinner"
            android:layout_centerHorizontal="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitFilterButton"
            android:text="@string/submitFilterText"
            android:layout_below="@+id/calendarView"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noFilterNeededButton"
            android:text="@string/noFilterNeededButton"
            android:layout_below="@+id/calendarView"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <!--
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateEntry"
                android:text="@string/dateText"
                android:inputType="date"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="138dp">
            </EditText>
            -->
    </RelativeLayout>

</LinearLayout>
